--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,8 @@
+@import 'libs/reset';
+@import 'libs/fonts';
+@import 'libs/slick';
+@import 'libs/animate';
+
 @import 'base/animated';
 @import "base/mixins";
 @import "base/variables";
