--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -2,6 +2,8 @@
     height: 630px;
     position: relative;
     &__info {
+        width: 350px;
+        min-height: 200px;
         position: absolute;
         display: block;
         top: 0;
