--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 650px;
     padding: 21px 0 93px 0;
-    background-image: url(../images/bg/bg.jpg);
+    background-image: url(../images/bg/bg-min.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
